# hots-helper

./: .dockerignore  .gitignore  Dockerfile  README.md  REPORT.zh.docx  REPORT.zh.md  pyproject.toml  railway.json  render.yaml
packaging/: DEPLOY.md  build-windows.ps1  hots-helper.spec  launcher.py  supabase_schema.sql
packaging/huggingface/: README.md
packaging/migrations/: 0001_player_match_inserted_at.sql
packaging/supabase/functions/translate/: index.ts
scripts/: build_icons.py  fetch_talent_names.py  md_to_docx.py
src/hots_helper/: bp.py  chat_ocr.py  config.py  hero_roles.py  heroes.py  i18n.py  lookup.py  maps.py  player_rank.py  stats.py  sync.py  sync_defaults.py  talent_build.py  talent_names.py  translate.py  vision.py  weekly_report.py
src/hots_helper/cli/: main.py
src/hots_helper/data/: __init__.py  talent_names.json
src/hots_helper/db/: __init__.py  schema.sql  store.py
src/hots_helper/ocr/: __init__.py  rapid.py  vision_macos.py  winrt_ocr.py
src/hots_helper/ocr/models/: japan_rec_crnn.onnx  korean_mobile_v2.0_rec_infer.onnx
src/hots_helper/parser/: __init__.py  protocols.py  replay.py
src/hots_helper/ui/: _carbon_hotkey.py  app.py  aram.py  calibrate.py  capture_progress.py  hotkey.py  hotkey_field.py  launcher.py  macos_overlay.py  main_window.py  match_detail_dialog.py  match_list_dialog.py  player_rank_dialog.py  popup.py  popup_brief.py  power_help.py  region_select.py  screenshot.py  squad_picker_dialog.py  talent_build_dialog.py  theme.py  translate_popup.py  weekly_report_dialog.py  workers.py
src/hots_helper/ui/assets/: __init__.py  icon.icns
src/hots_helper/watcher/: __init__.py  ingest.py  watcher.py
src/hots_helper/web/: __main__.py  app.py  auth.py  data.py  deps.py  serialize.py
src/hots_helper/web/routers/: bp.py  heroes.py  matches.py  meta.py  players.py  rankings.py  weekly.py
supabase/: README.md  config.toml
supabase/.temp/: linked-project.json
supabase/functions/translate/: index.ts
tests/: conftest.py  test_sync_heal.py  test_talent_build.py
tests/db/: test_hero_canonical.py  test_list_matches.py  test_match_detail.py
tests/web/: conftest.py  test_auth.py  test_endpoints.py  test_provider.py  test_serialize.py
web/: index.html  package-lock.json  package.json  screenshots.mjs  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/components/: common.tsx
web/src/features/bp/: BpAdvisorPage.tsx
web/src/features/dashboard/: DashboardPage.tsx
web/src/features/heroes/: HeroDetailPage.tsx  HeroRankingsPage.tsx  TalentBuildSection.tsx  TalentsPage.tsx  talents.css
web/src/features/matches/: MatchDetailPage.tsx  MatchListPage.tsx  MatchRow.tsx  matches.css
web/src/features/players/: PlayerDetailPage.tsx  PlayerRankingsPage.tsx
web/src/features/squad/: SquadPicker.tsx  SquadToolbar.tsx  squad.css
web/src/features/weekly/: WeeklyReportPage.tsx
web/src/lib/: api.ts  format.ts  squad.ts  types.ts
web/src/styles/: global.css  tokens.css
