[project]
name = "hots-helper"
version = "0.1.0"
description = "Heroes of the Storm replay ingest + player lookup"
requires-python = ">=3.11"
dependencies = [
    "heroprotocol>=2.55.4",
    "mpyq>=0.2.5",
    "watchdog>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
    "PySide6>=6.6.0",
    "pynput>=1.7.7",
    "mss>=9.0.1",
    "pillow>=10.0.0",
    "numpy>=2.4.4",
    "pyobjc-framework-vision>=12.1 ; sys_platform == 'darwin'",
    "winrt-runtime>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Media.Ocr>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Graphics.Imaging>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Storage>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Storage.Streams>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Globalization>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Foundation>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Foundation.Collections>=2.0.0 ; sys_platform == 'win32'",
]

[project.scripts]
hots = "hots_helper.cli.main:app"
hots-ui = "hots_helper.ui.app:main"
hots-calibrate = "hots_helper.ui.calibrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hots_helper"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.0.0",
]
