[project]
name = "hots-helper"
version = "0.1.0"
description = "Heroes of the Storm replay ingest + player lookup"
requires-python = ">=3.11"
dependencies = [
    "heroprotocol>=2.55.4",
    "mpyq>=0.2.5",
    "watchdog>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
    "PySide6>=6.6.0",
    "pynput>=1.7.7",
    "mss>=9.0.1",
    "pillow>=10.0.0",
    "numpy>=2.4.4",
    "pyobjc-framework-vision>=12.1 ; sys_platform == 'darwin'",
    # AppKit access so we can set NSWindow collectionBehavior on our
    # floating widgets — without it, the launcher / popups disappear
    # when HotS goes fullscreen because mac puts a fullscreen app in
    # its own Mission Control space.
    "pyobjc-framework-cocoa>=10.0 ; sys_platform == 'darwin'",
    "winrt-runtime>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Media.Ocr>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Graphics.Imaging>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Storage>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Storage.Streams>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Globalization>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Foundation>=2.0.0 ; sys_platform == 'win32'",
    "winrt-Windows.Foundation.Collections>=2.0.0 ; sys_platform == 'win32'",
    "pywin32>=306 ; sys_platform == 'win32'",
    "python-docx>=1.2.0",
    "rapidocr-onnxruntime>=1.4.4",
]

[project.optional-dependencies]
# Web service (FastAPI backend + built SPA). Kept out of the core
# dependency list so the desktop app / PyInstaller build stays lean —
# only the web deployment installs these.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
]
# Minimal runtime set for a *headless* web deployment (Docker / Hugging
# Face Space). The web service only touches the replay parser + cloud
# sync + analysis layer, so it needs none of the desktop deps
# (PySide6, onnxruntime, pynput, mss, …). The Dockerfile installs the
# package with --no-deps and this curated list to keep the image small.
web-runtime = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "mpyq>=0.2.5",
    "platformdirs>=4.2.0",
]

[project.scripts]
hots = "hots_helper.cli.main:app"
hots-ui = "hots_helper.ui.app:main"
hots-calibrate = "hots_helper.ui.calibrate:main"
hots-web = "hots_helper.web.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hots_helper"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "unit: unit tests (no I/O beyond a temp SQLite)",
    "integration: tests that exercise the FastAPI app via TestClient",
]
